Add build.sbt and add plugins.sbt